# ocaml-project-template

./: Makefile  README.md  myproject.opam  proj.opam
app/: dune  main.ml
src/: a.ml  dune  lib.ml
test/: a_test.ml  dune  run_tests.ml  test.ml
