opam-version: "1.2"
name: "myproject"
version: "0.1.0"
license: "MIT"
homepage: "https://github.com/ghulette/ocaml-project-template"
bug-reports: "https://github.com/ghulette/ocaml-project-template/issues"
dev-repo: "https://github.com/ghulette/ocaml-project-template.git"
authors: "Geoff Hulette <geoff@hulette.net>"
maintainer: "Geoff Hulette <geoff@hulette.net>"
synopsis: "A wonderful project"
description: """
My wonderful project is so wonderful.
"""

depends: [
  "dune" {>= "2.8" build}
]
build: ["dune" "build" "-p" name "-j" jobs]
